# nostr-stats

./: .gitignore  Cargo.toml  Makefile  README.md
migrations/: 001_init.sql
src/: check-relays.rs  extract-relays.rs  read-stats.rs  sync-lists.rs
