[package]
name = "nostr-stats"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "extract-relays"
path = "src/extract-relays.rs"

[[bin]]
name = "sync-lists"
path = "src/sync-lists.rs"

[dependencies]
nostr = { version = "0.42", features = ["std", "nip11"] }
nostr-sdk = { version = "0.42", features = ["lmdb"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = "0.3.19"
