[package]
name = "nostr-stats"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "extract-relays"
path = "src/extract-relays.rs"

[[bin]]
name = "sync-lists"
path = "src/sync-lists.rs"

[[bin]]
name = "check-relays"
path = "src/check-relays.rs"

[[bin]]
name = "read-stats"
path = "src/read-stats.rs"

[dependencies]
nostr = { git = "https://github.com/rust-nostr/nostr", rev = "4096b9da00f18c3089f734b27ce1388616f3cb13", features = ["std", "nip11"] }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "4096b9da00f18c3089f734b27ce1388616f3cb13", features = ["lmdb"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = "0.3.19"
